# mzbs-control-panel

./: LICENSE  README.md  main.py  pyproject.toml  setting.py
consolidated/: README.md  consolidated_repository_files.txt  consolidated_repository_files_index.txt  repository_directory_tree.txt
control_plane/: crypto.py  db.py  models.py  platform_admin_auth.py  rate_limit.py  router.py  signup_service.py  tenant_lookup.py  tenant_service.py
docs/: MULTI_TENANT_PLAN (5).md  commands.txt
migrations/: add_control_plane_tables.py  create_first_platform_admin.py  seed_first_tenant.py  verify_phase2_checklist.py
mzbs-platform/: package-lock.json  package.json  tailwind.config.ts
mzbs-platform/src/api/: PlatformAdminAPI.ts  SignupAPI.ts  client.ts
mzbs-platform/src/app/: globals.css  layout.tsx  page.tsx
mzbs-platform/src/app/(admin)/dashboard/: page.tsx
mzbs-platform/src/app/(admin)/login/: page.tsx
mzbs-platform/src/app/(marketing)/: layout.tsx  page.tsx
mzbs-platform/src/app/(marketing)/about/: page.tsx
mzbs-platform/src/app/(marketing)/blog/: page.tsx
mzbs-platform/src/app/(marketing)/components/: CTASection.tsx  FeatureCard.tsx  FeatureIcons.tsx  MarketingFooter.tsx  MarketingHeader.tsx  PricingCard.tsx  (+3 more)
mzbs-platform/src/components/: DashboardNavigation.tsx  PasswordInput.tsx  ProtectedPlatformRoute.tsx
mzbs-platform/src/context/: PlatformAdminContext.tsx
schemas/: control_plane_schemas.py
scripts/: consolidate_all.py  del_pycache.py  folder_structure.py
tests/: test_consolidate_repo.py  test_platform_admin_auth.py
utils/: logging.py
(+11 files in other folders)
